# SwiftShare

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  all-files.txt  docker-compose.yml  find_ip.bat  find_ip.py  find_ip.sh  package.json  render.yaml  start-desktop.bat  start_swiftshare.ps1  test_backend.ps1  vercel.json
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: config.rs  database.rs  discovery.rs  encryption.rs  main.rs  qr.rs  transfer.rs
desktop/: .gitignore  package-lock.json  package.json  pubspec.yaml  tailwind.config.js
desktop/coverage/: clover.xml
desktop/coverage/lcov-report/: index.html
desktop/public/: electron.js  index.html  manifest.json
desktop/src/: App.css  App.js  BackgroundGradient.js  index.css
desktop/src/components/: DeviceCard.js  FileDropZone.js  Sidebar.js  SkeletonLoader.js  Toast.js  Tooltip.js  TransferCard.js
desktop/src/pages/: Devices.js  Home.js  Settings.js  Transfers.js
desktop/src/store/: store.js
docs/: API.md  GETTING_STARTED.md
mobile/: .gitignore  AUTO_SETUP_GUIDE.md  README.md  REAL_TIME_SETUP.md  build_apk.bat  build_apk_simple.bat  pubspec.yaml
mobile/android/: settings.gradle
mobile/android/app/: build.gradle  build.gradle.kts
mobile/lib/: main.dart
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
shared/: types.ts
web/: package.json
web-frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  tailwind.config.ts  vercel.json
web-frontend/public/: robots.txt  sitemap.xml
web-frontend/src/: index.css
(+32 files in other folders)
