[package]
name = "swiftshare-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
aes-gcm = "0.10"
rand = "0.8"
mdns-sd = "0.6"
network-interface = "0.1"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.0"
futures = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
qrcode = "0.13"
image = "0.24"
warp = "0.3"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
hostname = "0.3"
tempfile = "3.8" 